working on description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commerceml-js",
   "version": "0.0.1",
-  "description": "",
+  "description": "A sax-style parser for CommerceMl (1C).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
