--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerceml-js",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A sax-style parser for CommerceMl (1C).",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/kirill-zhirnov/commerceml-js#readme",
   "dependencies": {
-    "node-expat": "^2.3.13",
+    "sax": "^1.2.4",
     "underscore": "^1.8.3",
     "x2js": "^2.0.1"
   },
